--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   pre:
-    - sudo apt-add-repository ppa:swi-prolog/stable; sudo apt-get update; sudo apt-get install swi-prolog
+    - sudo apt-add-repository ppa:swi-prolog/stable -y; sudo apt-get update; sudo apt-get install swi-prolog
 test:
   override:
       - make run
